@@ -101,7 +101,7 @@ $ plowdown http://www.zshare.net/delete/1234567890ABCD/ http://www.megaupload.co
 Written by Arnau Sanchez and Matthieu Crapet.
 
 .SH "SEE ALSO"
-plowdown(1), plowup(1)
+plowdown(1), plowup(1), plowlist(1)
 
 .SH COPYRIGHT
 Copyright (c) 2008\-2010 Plowshare Project.
