@@ -217,7 +217,7 @@ $ plowdown -m file_with_links.txt
 Written by Arnau Sanchez and Matthieu Crapet.
 
 .SH "SEE ALSO"
-plowup(1), plowdel(1)
+plowup(1), plowdel(1), plowlist(1)
 
 .SH COPYRIGHT
 Copyright (c) 2008\-2010 Plowshare Project.
