@@ -2,4 +2,4 @@
 set -e
 
 VERSION=$(cat CHANGELOG | head -n1 | sed "s/^.*(\(.*\)).*$/\1/")
-sed -i "s/^VERSION=.*$/VERSION=\"$VERSION\"/" src/{download.sh,upload.sh,delete.sh}
+sed -i "s/^VERSION=.*$/VERSION=\"$VERSION\"/" src/{download.sh,upload.sh,delete.sh,list.sh}
